[package]
name = "konrad_ast"
version = "0.1.0"
authors = ["Simon Kunz <simon.kunz21@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parse-display = "0.4.1"
derivative = "2.2.0"

konrad_span  = { path = "../konrad_span"  }
konrad_err   = { path = "../konrad_err"   }
konrad_lexer = { path = "../konrad_lexer" }