[package]
name = "konrad_lexer"
version = "0.1.0"
authors = ["Simon Kunz <simon.kunz21@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
pretty_assertions = "0.7.2"

[dependencies]
parse-display = "0.4.1"
float-cmp = "0.8.0"

konrad_span = {path = "../konrad_span"}
konrad_err = {path = "../konrad_err"}
